Switch DB2 to PostgreSQL for Render

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=search-api
-spring.datasource.url=jdbc:db2://localhost:25000/SAMPLE
-spring.datasource.username=db2inst1
-spring.datasource.password=Kento097
-spring.datasource.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
 
-# SQLのパラメータも表示（Hibernate 5系まで）
+# --- Render の環境変数を使う DB 接続設定 ---
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# --- JPA 設定 ---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# --- ログ ---
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-
